--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "fontsource-roboto": "^3.0.3",
+    "imask": "^6.0.5",
+    "markdown-to-jsx": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-imask": "^6.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-text-mask": "^5.4.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
