--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-imask": "^6.0.5",
+    "react-markdown": "^5.0.3",
+    "react-mathjax": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-text-mask": "^5.4.3",
+    "remark-math": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
