--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-imask": "^6.0.5",
+    "react-katex": "^2.0.2",
     "react-markdown": "^5.0.3",
     "react-mathjax": "^1.0.1",
+    "react-mathjax2": "0.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-text-mask": "^5.4.3",
