--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# project
+/data
+/api/data/*
+
+# VSCode
+.vscode
+
 # dependencies
 /node_modules
 /.pnp
