--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
+    "file-saver": "^2.0.5",
     "fontsource-roboto": "^3.0.3",
     "imask": "^6.0.5",
     "markdown-to-jsx": "^7.1.0",
     "prop-types": "^15.7.2",
+    "rc-progress": "^3.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-imask": "^6.0.5",
